--- a/Portfolio.html
+++ b/Portfolio.html
@@ -7,6 +7,7 @@
 <body>
 <h1>Hello, my name is Ronell Austin. I'm a hardworker who's always striving for the best.</h1>
 <p>This website was designed through HTML and showcases the various skillsets that I have when it comes to my portfolio</p>
+<img src="" style="width"
 
 <h1> <b>List of key skills </b> </h1>
 <ul>HTML</ul>
@@ -36,6 +37,17 @@
 </tr>
 
 </table>
+
+<h1> Contact Me! </h1>
+<form>
+    First name:
+    <input type="text" name="firstname"> <br>
+    Last name:
+         <input type="text" name="lastname"> <br>
+         <p> Ask a question and I'll get back with you in 1-2 business days</p>
+    <input type="text"> 
+    <input type="submit" value="Submit">
+    </form>    
 
 
 
