--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,12 +8,19 @@
 
 <div class="header-section">
 <body>
-<h1>Hello, my name is Ronell Austin. I'm a hardworker who's always striving for the best.</h1>
-<p>This website was designed through HTML and showcases the various skillsets that I have when it comes to my portfolio</p>
+  <marquee behavior="scroll" direction="right">  <img src="https://thumbs.gfycat.com/IllegalExhaustedGrassspider-size_restricted.gif" width="290" height="70" alt="W3docs" />    </marquee>
+
+<h1>Hello! Welcome to my portfolio.</h1>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+  </style> 
+<p>My name is Ronell Austin, I am currently 21 years old and a rising senior in college. In the future, I want to work as a advertising manager at an tech company. I really enjoy writing and my hobbies are gaming and listening to music. I am currently working on perfecting my HTML & CSS skills.</p>
+</p>
 <img src="ronellpic.jpg" style="width: 430px" <br>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Home</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,7 +30,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="https://5500-ronellgdyt-passion-ga6mheu8hon.ws-us54.gitpod.io/Storytelling.html" target="_blank">Back To Passion Project</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -36,9 +43,7 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+    
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -64,6 +69,13 @@
 <h1><b>Career Trajectory</b></h1>
 <p> In two years I see myself working at a tech agency such as Google or Microsoft, building up my technological skillset</p>
 <p> More excitedly, in five years I see myself publishing my very own fictional novel series. These goals require hardwork and dedication, and most importantly, passion.</p>
+</div>
+
+<div class="resume">
+  <h1>My Official Resume</h1> 
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/1070px-Golden_star.svg.png" style="width:100px">
+  <img src="Resume_Austin-1.png" style="width: 800px">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Golden_star.svg/1070px-Golden_star.svg.png" style="width:100px">
 </div>
 
 <div class="edu-section">
