--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,15 +8,6 @@
 
 <div class="header-section">
 <body>
-  <marquee behavior="scroll" direction="right">  <img src="https://thumbs.gfycat.com/IllegalExhaustedGrassspider-size_restricted.gif" width="290" height="70" alt="W3docs" />    </marquee>
-
-<h1>Hello! Welcome to my portfolio.</h1>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-  </style> 
-<p>My name is Ronell Austin, I am currently 21 years old and a rising senior in college. In the future, I want to work as a advertising manager at an tech company. I really enjoy writing and my hobbies are gaming and listening to music. I am currently working on perfecting my HTML & CSS skills.</p>
-</p>
-<img src="ronellpic.jpg" style="width: 430px" <br>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -30,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://5500-ronellgdyt-passion-ga6mheu8hon.ws-us54.gitpod.io/Storytelling.html" target="_blank">Back To Passion Project</a>
+            <a class="nav-link" href="https://5500-ronellgdyt-passion-ga6mheu8hon.ws-us58.gitpod.io/Storytelling.html" target="_blank">Passion Project</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
